--- a/r3f_next/package.json
+++ b/r3f_next/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
     "@types/three": "^0.168.0",
+    "gsap": "^3.12.5",
     "next": "14.2.11",
+    "r3f-perf": "^7.2.1",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.168.0"
